Styles: Fix 'vehicles__main' height on mobiles when in landscape mode

--- a/src/styles/pages/VehiclesPage.scss
+++ b/src/styles/pages/VehiclesPage.scss
@@ -35,4 +35,9 @@ $light-gray: var.$light-gray;
     justify-content: end;
     padding-bottom: 1rem;
   }
+
+  // ? breakpoint for mobile devices when are in landscape mode.
+  @media (orientation: landscape) and (max-height: 500px) {
+    height: unset;
+  }
 }
